# twitch-voxer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  fetch_emotes.py  main.py  messages.json  pyproject.toml  requirements.txt  timestamps.json  voices.json
data/: messages.json  timestamps.json  voices.json
emotes/: all_emotes.json  emotes.db
scripts/: fetch_emotes.py
voices/: F_elderly_woman.json  F_news_anchor.json  F_seductive.json  F_warm_narrator.json  F_wicked_witch.json  M_broadcast_announcer.json  M_calm_storyteller.json  M_evil_wizard.json  M_old_grandpa.json  M_radio_host.json  anime-girl.json  creepy-witch.json  deep-narrator.json  drunk-uncle.json  evil-villain.json  homer-simpson.json  old-man.json  pirate.json  pitchy.json  radio-dj.json  robot.json  worxbend.json
voxer/: __init__.py  bot.py  config.py  events.py  handler.py  log.py  scheduler.py  server.py  tts.py
voxer/static/: index.html  simple.html  speaker.glb
