[project]
name = "twitch-voxer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langdetect>=1.0.9",
    "pickledb>=1.3.2",
    "python-dotenv>=1.1.1",
    "starlette>=0.47.2",
    "twitchio>=3.1.0",
    "supertonic>=1.2.3",
]
