[project]
name = "twitch-voxer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langdetect>=1.0.9",
    "pickledb>=1.6",
    "python-dotenv>=1.1.1",
    "starlette>=1.0.0",
    "twitchio>=3.2.2",
    "supertonic>=1.2.3",
    "uvicorn[standard]>=0.47.0",
    "colorlog>=6.10.1",
    "emoji>=2.14",
]

[project.scripts]
twitch-voxer = "voxer:main"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
